--- a/public/index.html
+++ b/public/index.html
@@ -23,9 +23,6 @@
   <link href="assets/css/custom.css" rel="stylesheet">
 
   <style>
-    /* note: this is a hack for ios iframe for bootstrap themes shopify page */
-    /* this chunk of css is not part of the toolkit :) */
-
     body {
       width: 1px;
       min-width: 100%;
@@ -38,7 +35,7 @@
 <body>
 
 
-  <div id="app"></div>
+  <div id="app" style="position: relative"></div>
 
   <script>
     if (typeof module === 'object') {
@@ -55,8 +52,8 @@
     if (window.module) module = window.module;
   </script>
 
-  <script src="index.min.js"></script>
   <script src="renderer.js"></script>
+  <script src="index.min.js"></script>
 
   <script>
     // execute/clear BS loaders for docs
